--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "reactotron-redux": "^3.1.2",
     "reactotron-redux-saga": "^4.2.3",
     "redux": "^4.0.4",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "unform": "^1.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
